Changelog::
29 August 2018
        You can now like and dislike articles
        Interacting with page score now requires users to be logged in.
        
28 August 2018
        Website now has janky as hell basic error handling for wrong article urls

24 August 2018
        Upload form is now not accessible if you have an article already on the website
        Post Date is automated
        Added a recommended reading bar to news page
        Extra images in news pages now appear at bottom of page below 1600px instead of vanishing completley

23 August 2018
        Can now delete articles from database
        
22 August 2018:
        Website will now only accept one article at a time per each registered email address
        Form now submits all required data to database and displays on page
        Cleaned up console log.
        Started Spliting up form component into logic and view files.

21 August:
        You can now login to the website and submit articles

17 August 2018
        Form now submits only if fields are not empty
        Form reroutes to upload article on submit
        Fixed no-op error by adding componentWillUnmount



14 August 2018
        Further cleanup and re-organisation of components and css files.
        myKnews now links to upload form, filters back to home.
        Continued styling news page.

13 August 2018
        Styled News Page as it was before the database work
        Cleaned up, move around and separated components to make everything a bit neater and easier to use.

10 August 2018
        Connected project to firebase database
        Successfully displayed information from the database
        Setup a form that allows users to enter data and show on website. This was removed but will be added back in later
        When you click on a home page news item you will be taken to a page with information from the database rather than the local json file like before
        All of the above works when upload to the porfolio