@@ -2,7 +2,8 @@ Changelog::
 29 August 2018
         You can now like and dislike articles
         Interacting with page score now requires users to be logged in.
-        
+        Rudimentary implementation of like limit. Whatever you do. Don't refresh the page.
+
 28 August 2018
         Website now has janky as hell basic error handling for wrong article urls
 
